# mecab-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
examples/: multithreaded.rs  simple.rs
src/: lib.rs  mecab.rs
