[package]
name = "mecab"
license = "MIT"
version = "0.0.1"
authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
description = "Rust bindings for mecab a part-of-speech and morphological analyzer library"
documentation = "https://github.com/tsurai/mecab-rs"
homepage = "https://github.com/tsurai/mecab-rs"
repository = "https://github.com/tsurai/mecab-rs"
readme = "README.md"
keywords = ["mecab","libmecab", "japanese", "segmentation", "morphological", "analyzer", "pos"]

[dependencies]
libc = "*"

[lib]
name = "mecab"
