[package]
name = "mecab"
license = "MIT"
version = "0.1.3"
authors = ["Cristian Kubis <cristian.kubis@tsunix.de>"]
description = "Safe Rust wrapper for mecab a japanese language part-of-speech and morphological analyzer library"
documentation = "https://github.com/tsurai/mecab-rs"
homepage = "https://github.com/tsurai/mecab-rs"
repository = "https://github.com/tsurai/mecab-rs"
readme = "README.md"
keywords = ["mecab", "libmecab", "japanese", "morphological", "analyzer"]
